FIX ProjectCard links clipping

--- a/frontend/src/components/ProjectCard/ProjectCard.scss
+++ b/frontend/src/components/ProjectCard/ProjectCard.scss
@@ -20,6 +20,10 @@
         .project-hidden {
             display: none;
         }
+
+        .project-links {
+            display: none;
+        }
     }
 
     img {
@@ -64,6 +68,7 @@
                 .project-hidden {
                     display: flex;
                     flex-direction: column;
+                }
 
                     .project-links {
                         width: 95%;
@@ -88,7 +93,6 @@
                             color: #1df2f0;
                         }
                     }
-                }
             }
         }
     }
@@ -108,31 +112,30 @@
         .project-hidden {
             display: flex;
             flex-direction: column;
+            height: auto;
+        }
 
-            .project-links {
-                width: 95%;
-                margin: auto;
-                display: flex;
-                justify-content: space-evenly;
-                position: absolute;
-                bottom: 18px;
+        .project-links {
+            width: 95%;
+            margin: auto;
+            display: flex;
+            justify-content: space-evenly;
+            margin-top: 24px;
 
-                a {
-                    text-decoration: none;
-                    color: antiquewhite;
-                    font-weight: 700;
-                    cursor: pointer;
+            a {
+                text-decoration: none;
+                color: antiquewhite;
+                font-weight: 700;
+                cursor: pointer;
 
-                    i {
-                        margin-right: 8px;
-                    }
-                }
-
-                a:hover {
-                    color: #1df2f0;
+                i {
+                    margin-right: 8px;
                 }
             }
 
+            a:hover {
+                color: #1df2f0;
+            }
         }
     }
 }
